--- a/ricokali/pipeline/src/main/webapp/pages/employeeSubmitRequest.html
+++ b/ricokali/pipeline/src/main/webapp/pages/employeeSubmitRequest.html
@@ -21,7 +21,7 @@
             <div class="message"> </div>
                 <div class="col-md-6 col-md-offset-3"> </div>
                     <h2>Submit Document(s)</h2>                     
-                    <form role="form" method="post" id="reused_form" enctype=&quot;multipart/form-data&quot; >
+                    <form action="DispatcherServlet" method="post" name="submit_request" enctype="multipart/form-data" >
                         <div class="form-group">
                             <label for="name"> Name:</label>
                             <input type="text" class="form-control" id="name" name="name" required maxlength="50">
