--- a/ricokali/pipeline/src/main/webapp/pages/employeeSubmitRequest.html
+++ b/ricokali/pipeline/src/main/webapp/pages/employeeSubmitRequest.html
@@ -21,7 +21,7 @@
             <div class="message"> </div>
                 <div class="col-md-6 col-md-offset-3"> </div>
                     <h2>Submit Document(s)</h2>                     
-                    <form action="DispatcherServlet" method="post" name="submit_request" enctype="multipart/form-data" >
+                    <form action="submitRequestServlet" method="post" name="submit_request" enctype="multipart/form-data" >
                         <div class="form-group">
                             <label for="name"> Name:</label>
                             <input type="text" class="form-control" id="name" name="name" required maxlength="50">
@@ -38,7 +38,7 @@
                             <label for="name"> Image Upload:</label>
                             <input type="file" class="form-control" id="image" name="image" required>
                         </div>
-                        <button type="submit" class="btn btn-lg btn-success pull-right" id="btnContactUs">Submit</button>
+                        <button type="submit" class="submit-button" id="upload" value="Upload">Submit</button>
                     </form>
                     <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Message Submitted!</h3> </div>
                     <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Error sending form, please try again. </div>
